tests/invalidTest/other/bool_arith_true.q
# EXPECT the boolean(uint1) cannot do binary calculation with int
def void errorDef(){
    sint8 a = 8 + true
}